--- a/src/components/contact_us/contact-us.css
+++ b/src/components/contact_us/contact-us.css
@@ -104,14 +104,21 @@
     font-size: 0.875rem;
     line-height: 1.375rem; }
   .contact-form-wrap .form-select-floating > .form-control {
-    background-color: #283755;
     border-bottom: 1px solid #283755;
     border-top: none;
     border-left: none;
     border-right: none;
     border-radius: 0;
     padding: 0.5rem 0;
-    color: #fff; }
+    color: #fff;
+    background-color: transparent;
+    padding-right: 2rem;
+    position: relative;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    appearance: none;
+    background: url("data:image/svg+xml;utf8,<svg viewBox='0 0 140 140' width='12' height='12' xmlns='http://www.w3.org/2000/svg'><g><path d='m121.3,34.6c-1.6-1.6-4.2-1.6-5.8,0l-51,51.1-51.1-51.1c-1.6-1.6-4.2-1.6-5.8,0-1.6,1.6-1.6,4.2 0,5.8l53.9,53.9c0.8,0.8 1.8,1.2 2.9,1.2 1,0 2.1-0.4 2.9-1.2l53.9-53.9c1.7-1.6 1.7-4.2 0.1-5.8z' fill='white'/></g></svg>") no-repeat;
+    background-position: right 5px top 50%; }
     @media (min-width: 992px) {
       .contact-form-wrap .form-select-floating > .form-control {
         font-size: 1rem;
@@ -122,9 +129,6 @@
       box-shadow: unset;
       border-color: #283755;
       background-color: transparent; }
-    .contact-form-wrap .form-select-floating > .form-control option {
-      color: #fff;
-      background-color: #283755; }
   .contact-form-wrap .form-floating label::before,
   .contact-form-wrap .form-select-floating label::before {
     content: "";
