--- a/src/shared-components/tile/tile.css
+++ b/src/shared-components/tile/tile.css
@@ -5,18 +5,14 @@
 /* flex Sass mixin */
 /* mixins end */
 .tile-card-body {
-  padding: 1.5rem 1.5rem 2.5rem;
-  flex-direction: column; }
-  @media (min-width: 992px) {
-    .tile-card-body {
-      padding: 2rem; } }
+  background: transparent linear-gradient(270deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.11) 100%) 0% 0% no-repeat padding-box;
+  border-radius: 1.5rem; }
   .tile-card-body > img {
     width: 100%;
     height: 13.75rem; }
     @media (min-width: 992px) {
       .tile-card-body > img {
-        width: 19.25rem;
-        height: 100%; } }
+        height: auto; } }
   .tile-card-body .card-title,
   .tile-card-body .card-text {
     color: #1c1c1c; }
@@ -48,35 +44,5 @@
       color: #1c1c1c; }
 
 .tile-card {
-  border-radius: 1rem;
+  border-radius: 1.5rem;
   background-color: #d6f5f0; }
-  @media (min-width: 992px) {
-    .tile-card {
-      border-radius: 0; } }
-  .tile-card:not(:first-child) {
-    margin-top: 1rem; }
-  @media (min-width: 992px) {
-    .tile-card.vertical-tile-card-body {
-      width: 20.875rem; } }
-  @media (min-width: 992px) {
-    .tile-card.vertical-tile-card-body .tag-list {
-      display: -webkit-box;
-      -webkit-line-clamp: 4;
-      -webkit-box-orient: vertical;
-      overflow: hidden; } }
-  @media (min-width: 992px) {
-    .tile-card.vertical-tile-card-body .tile-card-body > img {
-      width: 100%;
-      height: auto; } }
-  @media (min-width: 992px) {
-    .tile-card.horizontal-tile-card-body .tile-card-body {
-      flex-direction: row; } }
-  @media (min-width: 992px) {
-    .tile-card.horizontal-tile-card-body .tile-details {
-      margin-left: 1rem; } }
-  @media (min-width: 992px) {
-    .tile-card.horizontal-tile-card-body .tag-list {
-      display: -webkit-box;
-      -webkit-line-clamp: 2;
-      -webkit-box-orient: vertical;
-      overflow: hidden; } }
