--- a/src/shared-components/tile/tile.scss
+++ b/src/shared-components/tile/tile.scss
@@ -1,20 +1,23 @@
 @import "../../assets/stylesheets/core";
 
 .tile-card-body {
-  padding: 1.5rem 1.5rem 2.5rem;
-  flex-direction: column;
+  // padding: 1.5rem 1.5rem 2.5rem;
+  // flex-direction: column;
 
-  @include media-breakpoint-up(lg) {
-    padding: 2rem;
-  }
+  background: transparent
+    linear-gradient(270deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.11) 100%)
+    0% 0% no-repeat padding-box;
+  border-radius: 1.5rem;
+  // @include media-breakpoint-up(lg) {
+  //   padding: 2rem;
+  // }
 
   > img {
     width: 100%;
     height: 13.75rem;
 
     @include media-breakpoint-up(lg) {
-      width: 19.25rem;
-      height: 100%;
+      height: auto;
     }
   }
 
@@ -61,61 +64,28 @@
 }
 
 .tile-card {
-  border-radius: 1rem;
+  border-radius: 1.5rem;
   background-color: #d6f5f0;
 
-  @include media-breakpoint-up(lg) {
-    border-radius: 0;
-  }
-
-  &:not(:first-child) {
-    margin-top: 1rem;
-  }
-
   &.vertical-tile-card-body {
-    @include media-breakpoint-up(lg) {
-      width: 20.875rem;
-    }
-
-    .tag-list {
-      @include media-breakpoint-up(lg) {
-        display: -webkit-box;
-        -webkit-line-clamp: 4;
-        -webkit-box-orient: vertical;
-        overflow: hidden;
-      }
-    }
-
-    .tile-card-body {
-      > img {
-        @include media-breakpoint-up(lg) {
-          width: 100%;
-          height: auto;
-        }
-      }
-    }
+    // .tag-list {
+    //   @include media-breakpoint-up(lg) {
+    //     display: -webkit-box;
+    //     -webkit-line-clamp: 4;
+    //     -webkit-box-orient: vertical;
+    //     overflow: hidden;
+    //   }
+    // }
   }
 
   &.horizontal-tile-card-body {
-    .tile-card-body {
-      @include media-breakpoint-up(lg) {
-        flex-direction: row;
-      }
-    }
-
-    .tile-details {
-      @include media-breakpoint-up(lg) {
-        margin-left: 1rem;
-      }
-    }
-
-    .tag-list {
-      @include media-breakpoint-up(lg) {
-        display: -webkit-box;
-        -webkit-line-clamp: 2;
-        -webkit-box-orient: vertical;
-        overflow: hidden;
-      }
-    }
+    // .tag-list {
+    //   @include media-breakpoint-up(lg) {
+    //     display: -webkit-box;
+    //     -webkit-line-clamp: 2;
+    //     -webkit-box-orient: vertical;
+    //     overflow: hidden;
+    //   }
+    // }
   }
 }
