contact us page select field issue

--- a/src/components/contact_us/contact-us.scss
+++ b/src/components/contact_us/contact-us.scss
@@ -162,6 +162,11 @@
         background-color: transparent;
       }
     }
+    .form-select-field {
+      option {
+        background-color: transparent;
+      }
+    }
   }
 
   .form-floating,
