--- a/src/components/contact_us/contact-us.css
+++ b/src/components/contact_us/contact-us.css
@@ -129,6 +129,8 @@
       box-shadow: unset;
       border-color: #283755;
       background-color: transparent; }
+  .contact-form-wrap .form-select-floating .form-select-field option {
+    background-color: transparent; }
   .contact-form-wrap .form-floating label::before,
   .contact-form-wrap .form-select-floating label::before {
     content: "";
