--- a/src/components/contact_us/contact-us.scss
+++ b/src/components/contact_us/contact-us.scss
@@ -164,7 +164,7 @@
     }
     .form-select-field {
       option {
-        background-color: transparent;
+        background-color: $bunting;
       }
     }
   }
