--- a/src/components/contact_us/contact-us.scss
+++ b/src/components/contact_us/contact-us.scss
@@ -164,7 +164,8 @@
     }
     .form-select-field {
       option {
-        background-color: $bunting;
+        background-color: $rhino;
+        padding: 0.5rem 1rem;
       }
     }
   }
