--- a/src/components/contact_us/contact-us.css
+++ b/src/components/contact_us/contact-us.css
@@ -130,8 +130,7 @@
       border-color: #283755;
       background-color: transparent; }
   .contact-form-wrap .form-select-floating .form-select-field option {
-    background-color: #283755;
-    padding: 0.5rem 1rem; }
+    background-color: #283755; }
   .contact-form-wrap .form-floating label::before,
   .contact-form-wrap .form-select-floating label::before {
     content: "";
