technology page fixes

--- a/src/assets/stylesheets/_variables.scss
+++ b/src/assets/stylesheets/_variables.scss
@@ -70,6 +70,7 @@ $burnt-sienna: #e86055;
 $rhino: #283755;
 $denim: #1270a8;
 $night-blue: #020449;
+$mint: #d6f5f0;
 
 //$colors: () !default;
 //$colors: map-merge((
