--- a/src/shared-components/industryTypeItem/industryTypeItem.css
+++ b/src/shared-components/industryTypeItem/industryTypeItem.css
@@ -5,8 +5,26 @@
 /* flex Sass mixin */
 /* mixins end */
 .domain-item-wrap img {
-  width: 100%;
+  width: 12.5rem;
   border-radius: 0.75rem; }
-  @media (min-width: 992px) {
+  @media (min-width: 768px) {
+    .domain-item-wrap img {
+      width: 15.25rem; } }
+  @media (min-width: 1200px) {
     .domain-item-wrap img {
       width: 19.5rem; } }
+
+.domain-item-wrap span {
+  font-weight: 600;
+  font-size: 1.875rem;
+  line-height: 2.6875rem;
+  color: #333333;
+  margin-top: 3rem; }
+  @media (min-width: 992px) {
+    .domain-item-wrap span {
+      font-size: 3rem;
+      line-height: 3.5625rem; } }
+
+.domain-item-wrap .default-btn-link {
+  left: 2rem;
+  bottom: 4.5rem; }
