--- a/src/shared-components/tile/tile.scss
+++ b/src/shared-components/tile/tile.scss
@@ -68,24 +68,24 @@
   background-color: $mint;
 
   &.vertical-tile-card-body {
-    // .tag-list {
-    //   @include media-breakpoint-up(lg) {
-    //     display: -webkit-box;
-    //     -webkit-line-clamp: 4;
-    //     -webkit-box-orient: vertical;
-    //     overflow: hidden;
-    //   }
-    // }
+    .tag-list {
+      @include media-breakpoint-up(lg) {
+        display: -webkit-box;
+        -webkit-line-clamp: 4;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+      }
+    }
   }
 
   &.horizontal-tile-card-body {
-    // .tag-list {
-    //   @include media-breakpoint-up(lg) {
-    //     display: -webkit-box;
-    //     -webkit-line-clamp: 2;
-    //     -webkit-box-orient: vertical;
-    //     overflow: hidden;
-    //   }
-    // }
+    .tag-list {
+      @include media-breakpoint-up(lg) {
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+      }
+    }
   }
 }
