header slider css changes on technolgy page

--- a/src/shared-components/industryTypeItem/industryTypeItem.scss
+++ b/src/shared-components/industryTypeItem/industryTypeItem.scss
@@ -30,6 +30,10 @@
   .default-btn-link {
     left: 2rem;
     bottom: 4.5rem;
+
+    @include media-breakpoint-up(xl) {
+      bottom: 5.5rem;
+    }
   }
 }
 
