--- a/src/shared-components/industryTypeItem/industryTypeItem.css
+++ b/src/shared-components/industryTypeItem/industryTypeItem.css
@@ -28,6 +28,9 @@
 .domain-item-wrap .default-btn-link {
   left: 2rem;
   bottom: 4.5rem; }
+  @media (min-width: 1200px) {
+    .domain-item-wrap .default-btn-link {
+      bottom: 5.5rem; } }
 
 .industry-slider .slick-slider .slick-dots {
   bottom: -4.5rem; }
