slider fixes in technolgy and industry page

--- a/src/components/domainExpertise/domain-header.css
+++ b/src/components/domainExpertise/domain-header.css
@@ -17,14 +17,13 @@
         margin: 0 6.25rem; } }
 
 .strip-slider-item .slider-item-logo {
-  width: 3rem;
-  height: 3rem; }
+  width: 1.5rem;
+  height: 100%; }
 
 .strip-slider-item .title {
   color: #1c1c1c;
   font-size: 1rem;
-  line-height: 0.5625rem;
-  margin-left: 1rem; }
+  line-height: 0.5625rem; }
   @media (min-width: 992px) {
     .strip-slider-item .title {
       font-size: 1.125rem;
