technology slider fixes

--- a/src/assets/stylesheets/_variables.scss
+++ b/src/assets/stylesheets/_variables.scss
@@ -27,7 +27,7 @@ $gray-40: #666666;
 $gray-44: #707070;
 $gray-56: #8e8e8e; // black 60%
 $gray-60: #999999; // black 40%
-$gray-68: #adadad; // black 32%
+$gray-68: #adadad;
 $gray-84: #d5d5d5;
 $gray-86: #dbdbdb; // black 32%
 $gray-94: #efefef; // black 6%
