technology slider fixes

--- a/src/assets/stylesheets/_variables.scss
+++ b/src/assets/stylesheets/_variables.scss
@@ -27,7 +27,8 @@ $gray-40: #666666;
 $gray-44: #707070; // black 60%
 $gray-60: #999999; // black 40%
 $gray-68: #adadad;
-$gray-84: #d5d5d5; // black 32%
+$gray-84: #d5d5d5;
+$gray-86: #dbdbdb; // black 32%
 $gray-94: #efefef; // black 6%
 $gray-95: #f2f2f2; // black 5%
 $gray-96: #f4f4f4;
@@ -71,6 +72,7 @@ $rhino: #283755;
 $denim: #1270a8;
 $night-blue: #020449;
 $mint: #d6f5f0;
+$persian-red: #cf4338;
 
 //$colors: () !default;
 //$colors: map-merge((
