--- a/src/components/technologies/technologies-new.css
+++ b/src/components/technologies/technologies-new.css
@@ -32,14 +32,16 @@
 .tiles-wrapper {
   display: grid;
   grid-template-columns: 1fr;
-  gap: 1rem; }
+  gap: 1rem;
+  padding: 3.5rem 0 0; }
   @media (min-width: 768px) {
     .tiles-wrapper {
       grid-template-columns: repeat(2, 1fr); } }
   @media (min-width: 992px) {
     .tiles-wrapper {
       grid-template-columns: repeat(3, 1fr);
-      gap: 1.5rem; } }
+      gap: 1.5rem;
+      padding: 7.5rem 0 0; } }
   @media (min-width: 1200px) {
     .tiles-wrapper {
       gap: 2rem; } }
