--- a/src/components/domainExpertise/domain-header.scss
+++ b/src/components/domainExpertise/domain-header.scss
@@ -2,7 +2,11 @@
 
 .strip-slider {
   z-index: 999;
-  bottom: -1rem;
+  bottom: -1.5rem;
+
+  @include media-breakpoint-up(lg) {
+    bottom: -2rem;
+  }
   .slick-slider {
     margin: 0 0.75rem;
     background-color: $white;
@@ -14,25 +18,74 @@
     }
   }
 
-  .slick-list {
-    height: auto !important;
+  .carousel-control-prev,
+  .carousel-control-next {
+    width: 2rem;
+    opacity: 1;
+    background-color: $white;
+    border-radius: 0.5rem;
+
+    i {
+      font-size: 1rem;
+      color: $gray-86;
+    }
+
+    &:hover {
+      i {
+        color: $burnt-sienna;
+      }
+    }
   }
 }
 
 .strip-slider-item {
+  padding: 1rem;
+  @include media-breakpoint-up(lg) {
+    padding: 1.25rem;
+  }
   .slider-item-logo {
-    width: 1.5rem;
-    height: 100%;
+    width: auto;
+    height: 1.5rem;
+    margin-right: 0.5rem;
+
+    @include media-breakpoint-up(lg) {
+      height: 2rem;
+    }
   }
 
   .title {
     color: $gray-11;
     font-size: 1rem;
-    line-height: 0.5625rem;
+    line-height: 1.5;
+    white-space: nowrap;
 
     @include media-breakpoint-up(lg) {
       font-size: 1.125rem;
-      line-height: 0.75rem;
+    }
+
+    &:hover,
+    &:active {
+      text-decoration: none;
+    }
+  }
+}
+
+.active-slider {
+  .strip-slider-item {
+    .title {
+      color: $persian-red;
+    }
+
+    &::after {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 0.1875rem;
+      background-color: $persian-red;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      z-index: 1;
     }
   }
 }
