--- a/src/assets/stylesheets/_variables.scss
+++ b/src/assets/stylesheets/_variables.scss
@@ -73,6 +73,7 @@ $denim: #1270a8;
 $night-blue: #020449;
 $mint: #d6f5f0;
 $persian-red: #cf4338;
+$oxford-blue: #384250;
 
 //$colors: () !default;
 //$colors: map-merge((
