--- a/src/assets/stylesheets/_global.scss
+++ b/src/assets/stylesheets/_global.scss
@@ -47,13 +47,20 @@ html {
 // Slider Dots
 
 .industry-slider,
-.gallery-slider-wrapper {
+.gallery-slider-wrapper,
+.technology-slider-wrapper {
   .slick-slider {
     .slick-dots {
       li {
         button {
           &::before {
             font-size: 0.625rem;
+          }
+
+          &:focus {
+            &::before {
+              opacity: 0.25;
+            }
           }
         }
 
@@ -62,6 +69,12 @@ html {
             &::before {
               font-size: 1rem;
               color: $burnt-sienna;
+            }
+
+            &:focus {
+              &::before {
+                opacity: 0.75;
+              }
             }
           }
         }
