tile component layout ui

--- a/src/components/technologies/technologies-new.css
+++ b/src/components/technologies/technologies-new.css
@@ -30,18 +30,22 @@
       padding: 0; } }
 
 .tiles-wrapper {
-  display: grid;
-  grid-template-columns: 1fr;
-  gap: 1rem;
   padding: 3.5rem 0 0; }
-  @media (min-width: 768px) {
-    .tiles-wrapper {
-      grid-template-columns: repeat(2, 1fr); } }
-  @media (min-width: 992px) {
-    .tiles-wrapper {
-      grid-template-columns: repeat(3, 1fr);
-      gap: 1.5rem;
-      padding: 7.5rem 0 0; } }
-  @media (min-width: 1200px) {
-    .tiles-wrapper {
-      gap: 2rem; } }
+  .tiles-wrapper .tiles-row {
+    flex-direction: column; }
+    @media (min-width: 992px) {
+      .tiles-wrapper .tiles-row {
+        flex-direction: row;
+        margin: 0 -0.5rem; } }
+    @media (min-width: 992px) {
+      .tiles-wrapper .tiles-row .vertical-tiles-row,
+      .tiles-wrapper .tiles-row .horizontal-tiles-row {
+        padding: 0 0.5rem; } }
+    .tiles-wrapper .tiles-row .horizontal-tiles-row {
+      flex-direction: column; }
+      @media (min-width: 992px) {
+        .tiles-wrapper .tiles-row .horizontal-tiles-row .tile-card:not(:first-child) {
+          margin-top: 1rem; } }
+    @media (min-width: 992px) {
+      .tiles-wrapper .tiles-row:not(:first-child) {
+        margin-top: 1rem; } }
