--- a/src/components/technologies/technologies-new.scss
+++ b/src/components/technologies/technologies-new.scss
@@ -31,22 +31,55 @@
 }
 
 .tiles-wrapper {
-  display: grid;
-  grid-template-columns: 1fr;
-  gap: 1rem;
+  // display: grid;
+  // grid-template-columns: 1fr;
+  // gap: 1rem;
   padding: 3.5rem 0 0;
 
-  @include media-breakpoint-up(md) {
-    grid-template-columns: repeat(2, 1fr);
-  }
+  // @include media-breakpoint-up(md) {
+  //   grid-template-columns: repeat(2, 1fr);
+  // }
 
-  @include media-breakpoint-up(lg) {
-    grid-template-columns: repeat(3, 1fr);
-    gap: 1.5rem;
-    padding: 7.5rem 0 0;
-  }
+  // @include media-breakpoint-up(lg) {
+  //   grid-template-columns: repeat(3, 1fr);
+  //   gap: 1.5rem;
+  //   padding: 7.5rem 0 0;
+  // }
 
-  @include media-breakpoint-up(xl) {
-    gap: 2rem;
+  // @include media-breakpoint-up(xl) {
+  //   gap: 2rem;
+  // }
+
+  .tiles-row {
+    flex-direction: column;
+
+    @include media-breakpoint-up(lg) {
+      flex-direction: row;
+      margin: 0 -0.5rem;
+    }
+
+    .vertical-tiles-row,
+    .horizontal-tiles-row {
+      @include media-breakpoint-up(lg) {
+        padding: 0 0.5rem;
+      }
+    }
+    .horizontal-tiles-row {
+      flex-direction: column;
+
+      .tile-card {
+        &:not(:first-child) {
+          @include media-breakpoint-up(lg) {
+            margin-top: 1rem;
+          }
+        }
+      }
+    }
+
+    &:not(:first-child) {
+      @include media-breakpoint-up(lg) {
+        margin-top: 1rem;
+      }
+    }
   }
 }
