--- a/src/shared-components/tile/tile.css
+++ b/src/shared-components/tile/tile.css
@@ -5,13 +5,16 @@
 /* flex Sass mixin */
 /* mixins end */
 .tile-card-body {
+  flex-direction: column;
   background: transparent linear-gradient(270deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.11) 100%) 0% 0% no-repeat padding-box;
   border-radius: 1.5rem; }
   .tile-card-body > img {
-    width: 100%;
-    height: 13.75rem; }
+    width: auto;
+    height: 13.75rem;
+    margin: 0 auto; }
     @media (min-width: 992px) {
       .tile-card-body > img {
+        width: 100%;
         height: auto; } }
   .tile-card-body .card-title,
   .tile-card-body .card-text {
@@ -25,13 +28,17 @@
         line-height: 2rem; } }
   .tile-card-body .card-text {
     font-size: 1rem;
-    line-height: 1.375rem; }
+    line-height: 1.375rem;
+    -webkit-line-clamp: 4; }
     @media (min-width: 992px) {
       .tile-card-body .card-text {
         font-size: 0.875rem; } }
 
 .tag-list {
-  margin: 0 -0.125rem 1.25rem; }
+  margin: 0; }
+  @media (min-width: 992px) {
+    .tag-list {
+      margin: 0 -0.125rem 1.25rem; } }
   .tag-list .tag-list-item-wrap {
     padding: 0 0.125rem;
     margin-bottom: 0.25rem;
@@ -45,15 +52,31 @@
 
 .tile-card {
   border-radius: 1.5rem;
-  background-color: #d6f5f0; }
+  background-color: #d6f5f0;
+  margin-top: 1rem; }
   @media (min-width: 992px) {
-    .tile-card.vertical-tile-card-body .tag-list {
+    .tile-card {
+      margin-top: 0; } }
+  .tile-card.vertical {
+    height: 100%; }
+    @media (min-width: 992px) {
+      .tile-card.vertical {
+        width: 20.875rem; } }
+  @media (min-width: 992px) {
+    .tile-card.horizontal .tile-card-body {
+      flex-direction: row; } }
+  @media (min-width: 992px) {
+    .tile-card.horizontal .tile-card-body img {
+      width: 19.5rem;
+      margin-right: 16px; } }
+  @media (min-width: 992px) {
+    .tile-card.vertical .tag-list {
       display: -webkit-box;
       -webkit-line-clamp: 4;
       -webkit-box-orient: vertical;
       overflow: hidden; } }
   @media (min-width: 992px) {
-    .tile-card.horizontal-tile-card-body .tag-list {
+    .tile-card.horizontal .tag-list {
       display: -webkit-box;
       -webkit-line-clamp: 2;
       -webkit-box-orient: vertical;
