--- a/src/shared-components/tile/tile.scss
+++ b/src/shared-components/tile/tile.scss
@@ -2,7 +2,7 @@
 
 .tile-card-body {
   // padding: 1.5rem 1.5rem 2.5rem;
-  // flex-direction: column;
+  flex-direction: column;
 
   background: transparent
     linear-gradient(270deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.11) 100%)
@@ -13,10 +13,12 @@
   // }
 
   > img {
-    width: 100%;
+    width: auto;
     height: 13.75rem;
+    margin: 0 auto;
 
     @include media-breakpoint-up(lg) {
+      width: 100%;
       height: auto;
     }
   }
@@ -38,6 +40,7 @@
   .card-text {
     font-size: 1rem;
     line-height: 1.375rem;
+    -webkit-line-clamp: 4;
 
     @include media-breakpoint-up(lg) {
       font-size: 0.875rem;
@@ -46,7 +49,10 @@
 }
 
 .tag-list {
-  margin: 0 -0.125rem 1.25rem;
+  margin: 0;
+  @include media-breakpoint-up(lg) {
+    margin: 0 -0.125rem 1.25rem;
+  }
 
   .tag-list-item-wrap {
     padding: 0 0.125rem;
@@ -66,8 +72,34 @@
 .tile-card {
   border-radius: 1.5rem;
   background-color: $mint;
+  margin-top: 1rem;
+  @include media-breakpoint-up(lg) {
+    margin-top: 0;
+  }
 
-  &.vertical-tile-card-body {
+  &.vertical {
+    height: 100%;
+    @include media-breakpoint-up(lg) {
+      width: 20.875rem;
+    }
+  }
+
+  &.horizontal {
+    .tile-card-body {
+      @include media-breakpoint-up(lg) {
+        flex-direction: row;
+      }
+
+      img {
+        @include media-breakpoint-up(lg) {
+          width: 19.5rem;
+          margin-right: 16px;
+        }
+      }
+    }
+  }
+
+  &.vertical {
     .tag-list {
       @include media-breakpoint-up(lg) {
         display: -webkit-box;
@@ -78,7 +110,7 @@
     }
   }
 
-  &.horizontal-tile-card-body {
+  &.horizontal {
     .tag-list {
       @include media-breakpoint-up(lg) {
         display: -webkit-box;
