--- a/src/components/domainExpertise/domain-header.scss
+++ b/src/components/domainExpertise/domain-header.scss
@@ -67,7 +67,7 @@
   .title {
     color: $gray-11;
     font-size: 0.875rem;
-    line-height: 1.5;
+    line-height: 2rem;
     white-space: nowrap;
 
     // @include media-breakpoint-up(lg) {
