--- a/src/components/technologies/technologies-new.scss
+++ b/src/components/technologies/technologies-new.scss
@@ -34,7 +34,7 @@
   // display: grid;
   // grid-template-columns: 1fr;
   // gap: 1rem;
-  padding: 3.5rem 0 0;
+  padding: 3.5rem 2rem 0;
 
   // @include media-breakpoint-up(md) {
   //   grid-template-columns: repeat(2, 1fr);
