--- a/src/shared-components/tile/tile.css
+++ b/src/shared-components/tile/tile.css
@@ -12,10 +12,6 @@
     width: auto;
     height: 13.75rem;
     margin: 0 auto; }
-    @media (min-width: 992px) {
-      .tile-card-body > img {
-        width: 100%;
-        height: auto; } }
   .tile-card-body .card-title,
   .tile-card-body .card-text {
     color: #1c1c1c; }
@@ -24,7 +20,7 @@
     line-height: 1.875rem; }
     @media (min-width: 992px) {
       .tile-card-body .card-title {
-        font-size: 1.5rem;
+        font-size: 1.375rem;
         line-height: 2rem; } }
   .tile-card-body .card-text {
     font-size: 1rem;
@@ -41,14 +37,17 @@
       margin: 0 -0.125rem 1.25rem; } }
   .tag-list .tag-list-item-wrap {
     padding: 0 0.125rem;
-    margin-bottom: 0.25rem;
-    display: inline-block; }
+    margin-bottom: 0.25rem; }
     .tag-list .tag-list-item-wrap .tag-list-item {
       padding: 0.125rem 0.5rem;
       border-radius: 0.25rem;
       font-size: 0.875rem;
       line-height: 1.125rem;
       color: #1c1c1c; }
+      @media (min-width: 992px) {
+        .tag-list .tag-list-item-wrap .tag-list-item {
+          font-size: 0.6875rem;
+          line-height: 0.8125rem; } }
 
 .tile-card {
   border-radius: 1.5rem;
@@ -64,20 +63,9 @@
         width: 20.875rem; } }
   @media (min-width: 992px) {
     .tile-card.horizontal .tile-card-body {
-      flex-direction: row; } }
+      flex-direction: row;
+      padding-left: 0; } }
   @media (min-width: 992px) {
     .tile-card.horizontal .tile-card-body img {
       width: 19.5rem;
       margin-right: 16px; } }
-  @media (min-width: 992px) {
-    .tile-card.vertical .tag-list {
-      display: -webkit-box;
-      -webkit-line-clamp: 4;
-      -webkit-box-orient: vertical;
-      overflow: hidden; } }
-  @media (min-width: 992px) {
-    .tile-card.horizontal .tag-list {
-      display: -webkit-box;
-      -webkit-line-clamp: 2;
-      -webkit-box-orient: vertical;
-      overflow: hidden; } }
