--- a/src/shared-components/tile/tile.scss
+++ b/src/shared-components/tile/tile.scss
@@ -1,26 +1,22 @@
 @import "../../assets/stylesheets/core";
 
 .tile-card-body {
-  // padding: 1.5rem 1.5rem 2.5rem;
   flex-direction: column;
 
   background: transparent
     linear-gradient(270deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.11) 100%)
     0% 0% no-repeat padding-box;
   border-radius: 1.5rem;
-  // @include media-breakpoint-up(lg) {
-  //   padding: 2rem;
-  // }
 
   > img {
     width: auto;
     height: 13.75rem;
     margin: 0 auto;
 
-    @include media-breakpoint-up(lg) {
-      width: 100%;
-      height: auto;
-    }
+    // @include media-breakpoint-up(lg) {
+    //   width: 100%;
+    //   height: auto;
+    // }
   }
 
   .card-title,
@@ -32,7 +28,7 @@
     line-height: 1.875rem;
 
     @include media-breakpoint-up(lg) {
-      font-size: 1.5rem;
+      font-size: 1.375rem;
       line-height: 2rem;
     }
   }
@@ -57,7 +53,6 @@
   .tag-list-item-wrap {
     padding: 0 0.125rem;
     margin-bottom: 0.25rem;
-    display: inline-block;
 
     .tag-list-item {
       padding: 0.125rem 0.5rem;
@@ -65,6 +60,10 @@
       font-size: 0.875rem;
       line-height: 1.125rem;
       color: $gray-11;
+      @include media-breakpoint-up(lg) {
+        font-size: 0.6875rem;
+        line-height: 0.8125rem;
+      }
     }
   }
 }
@@ -88,6 +87,7 @@
     .tile-card-body {
       @include media-breakpoint-up(lg) {
         flex-direction: row;
+        padding-left: 0;
       }
 
       img {
@@ -101,23 +101,23 @@
 
   &.vertical {
     .tag-list {
-      @include media-breakpoint-up(lg) {
-        display: -webkit-box;
-        -webkit-line-clamp: 4;
-        -webkit-box-orient: vertical;
-        overflow: hidden;
-      }
+      // @include media-breakpoint-up(lg) {
+      //   display: -webkit-box;
+      //   -webkit-line-clamp: 4;
+      //   -webkit-box-orient: vertical;
+      //   overflow: hidden;
+      // }
     }
   }
 
   &.horizontal {
-    .tag-list {
-      @include media-breakpoint-up(lg) {
-        display: -webkit-box;
-        -webkit-line-clamp: 2;
-        -webkit-box-orient: vertical;
-        overflow: hidden;
-      }
-    }
+    // .tag-list {
+    //   @include media-breakpoint-up(lg) {
+    //     display: -webkit-box;
+    //     -webkit-line-clamp: 2;
+    //     -webkit-box-orient: vertical;
+    //     overflow: hidden;
+    //   }
+    // }
   }
 }
