--- a/src/shared-components/defaultButton/defaultButton.css
+++ b/src/shared-components/defaultButton/defaultButton.css
@@ -4,7 +4,7 @@
 /* rem unit mixin */
 /* flex Sass mixin */
 /* mixins end */
-.btn.default-btn {
+.default-btn {
   background-color: #000000;
   border-radius: 0;
   border-left: 17px solid #e86055;
@@ -13,16 +13,16 @@
   border-right: none;
   width: auto;
   min-width: 7.6875rem; }
-  .btn.default-btn a {
+  .default-btn a {
     font-size: 0.9375rem;
     line-height: 1rem;
     color: #fff;
     text-decoration: none; }
-    .btn.default-btn a > img {
+    .default-btn a > img {
       vertical-align: middle;
       width: 1.375rem;
       height: auto; }
-  .btn.default-btn.active, .btn.default-btn:active, .btn.default-btn:hover, .btn.default-btn:focus {
+  .default-btn.active, .default-btn:active, .default-btn:hover, .default-btn:focus {
     background-color: #000000;
     border-left: 17px solid #e86055;
     border-top: none;
@@ -31,9 +31,9 @@
     box-shadow: none;
     outline: none; }
 
-.btn.default-btn:not(:disabled):not(.disabled):active:focus,
-.btn.default-btn:not(:disabled):not(.disabled).active:focus,
-.show > .btn.default-btn.dropdown-toggle:focus {
+.default-btn:not(:disabled):not(.disabled):active:focus,
+.default-btn:not(:disabled):not(.disabled).active:focus,
+.show > .default-btn.dropdown-toggle:focus {
   background-color: #000000;
   border-left: 17px solid #e86055;
   border-top: none;
