hover effect added in tile card

--- a/src/assets/stylesheets/_variables.scss
+++ b/src/assets/stylesheets/_variables.scss
@@ -74,6 +74,7 @@ $night-blue: #020449;
 $mint: #d6f5f0;
 $persian-red: #cf4338;
 $oxford-blue: #384250;
+$merino: #ddd5ca;
 
 //$colors: () !default;
 //$colors: map-merge((
