--- a/src/shared-components/tile/tile.scss
+++ b/src/shared-components/tile/tile.scss
@@ -120,4 +120,48 @@
     //   }
     // }
   }
+
+  .tile-hover-wrap {
+    display: none;
+    .title-box {
+      h3 {
+        color: $white;
+        font-size: 2rem;
+        line-height: 2.75rem;
+      }
+      margin-bottom: 2rem;
+    }
+
+    .see-more-btn {
+      &::after {
+        content: "";
+        position: absolute;
+        background-color: $merino;
+        height: 0.125rem;
+        width: 50%;
+        right: -1rem;
+        top: 50%;
+        transform: translateY(-50%);
+        z-index: -1;
+      }
+    }
+  }
+  &:hover {
+    .tile-hover-wrap {
+      position: absolute;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      padding: 0 1rem;
+      width: 100%;
+      height: 100%;
+      left: 0;
+      top: 0;
+      right: 0;
+      backdrop-filter: blur(15px);
+      -webkit-backdrop-filter: blur(15px);
+      border-radius: 1.5rem;
+    }
+  }
 }
