--- a/src/assets/stylesheets/_variables.scss
+++ b/src/assets/stylesheets/_variables.scss
@@ -793,7 +793,7 @@ $display4-size: 3.75rem;
 //$modal-content-box-shadow-sm-up:    0 .5rem 1rem rgba($black, .5) !default;
 
 //$modal-backdrop-bg:                 $black !default;
-//$modal-backdrop-opacity:            .5 !default;
+$modal-backdrop-opacity: 0.75;
 //$modal-header-border-color:         $gray-200 !default;
 //$modal-footer-border-color:         $modal-header-border-color !default;
 //$modal-header-border-width:         $modal-content-border-width !default;
