--- a/src/shared-components/sliderModal/sliderModal.css
+++ b/src/shared-components/sliderModal/sliderModal.css
@@ -4,28 +4,34 @@
 /* rem unit mixin */
 /* flex Sass mixin */
 /* mixins end */
-.jw-modal .jw-modal-body {
+.slider-modal .slider-modal-body {
   padding: 1rem 4.5rem; }
 
-.jw-modal .modal-dialog {
+.slider-modal .modal-dialog {
   max-width: 43.75rem;
   height: 100%; }
 
-.jw-modal .modal-content {
+.slider-modal .modal-content {
   background: #efefef linear-gradient(270deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.11) 100%) 0% 0% no-repeat padding-box;
   border-radius: 1rem;
   border: none; }
-  .jw-modal .modal-content img {
+  .slider-modal .modal-content img {
     width: auto;
-    height: 13.75rem; }
-  .jw-modal .modal-content .tag-list {
+    height: 13.75rem;
+    margin: 0 auto; }
+  .slider-modal .modal-content .tag-list {
     margin-bottom: 1rem; }
-  .jw-modal .modal-content h5 {
+  .slider-modal .modal-content h5 {
     font-size: 1.1875rem;
     line-height: 1.5625rem;
     color: #1c1c1c;
     margin-bottom: 1rem; }
-  .jw-modal .modal-content p {
+  .slider-modal .modal-content p {
     font-size: 0.875rem;
     line-height: 1.375rem;
     color: #1c1c1c; }
+
+.slider-modal .slick-slider {
+  width: 100%; }
+  .slider-modal .slick-slider .slick-slide {
+    padding: 0 1.5rem; }
