--- a/src/shared-components/sliderModal/sliderModal.scss
+++ b/src/shared-components/sliderModal/sliderModal.scss
@@ -1,7 +1,7 @@
 @import "../../assets/stylesheets/core";
 
-.jw-modal {
-  .jw-modal-body {
+.slider-modal {
+  .slider-modal-body {
     padding: 1rem 4.5rem;
   }
   .modal-dialog {
@@ -18,6 +18,7 @@
     img {
       width: auto;
       height: 13.75rem;
+      margin: 0 auto;
     }
 
     .tag-list {
@@ -33,6 +34,14 @@
       font-size: 0.875rem;
       line-height: 1.375rem;
       color: $gray-11;
+    }
+  }
+
+  .slick-slider {
+    width: 100%;
+
+    .slick-slide {
+      padding: 0 1.5rem;
     }
   }
 }
